Correction version mobile images cover de la section activite

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,6 +32,10 @@ i {
     color: #F2F2F2;
 }
 
+img {
+    object-fit: cover;
+}
+
 /* Style du header */
 
 header {
